...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4b-0Z-MIS">
                                <rect key="frame" x="25" y="273" width="343" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="authButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Auth">
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W3N-a1-ucZ">
                                <rect key="frame" x="25" y="159" width="343" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="textFieldEmailUsername"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="SOB-bn-XrY"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pDD-wL-smv">
                                <rect key="frame" x="25" y="229" width="343" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="textFieldPassword"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="lMj-lx-ixh"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jdo-jV-L8y">
                                <rect key="frame" x="25" y="320" width="343" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonLoginSubmit"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="lLN-NV-51c"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cZq-te-fBv">
                                <rect key="frame" x="25" y="279" width="141.66666666666666" height="26"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonResetPass"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Forgot password?">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rIg-FA-Fol">
                                <rect key="frame" x="255" y="621.66666666666663" width="92" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonRegister"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Register">
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ISM-Uw-AV7">
                                <rect key="frame" x="25" y="159" width="343" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="textFieldEmail"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="ilA-z1-4cw"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V2x-P6-QyI">
                                <rect key="frame" x="25" y="229" width="343" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="textFieldUserName"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="oMg-6o-jWt"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ybR-0D-oYx">
                                <rect key="frame" x="25" y="299" width="343" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="textFieldEnterPassword"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="TZb-sk-hn3"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aq7-Qa-E8n">
                                <rect key="frame" x="25" y="369" width="343" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="textFieldRepeatPassword"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="JVS-ob-Hkm"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Dl-HF-bu0">
                                <rect key="frame" x="25" y="456" width="343" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonRegisterSubmit"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="hQf-jP-hhQ"/>
...
